2019-03-12 Franz Holzinger <franz@ttproducts.de>
    * new feature: partfiles give a list of files from which one must be included in the backtrace in order to generate a debug output
    * use new PHP feature: use the short call debug_backtrace(DEBUG_BACKTRACE_IGNORE_ARGS).
    * bugfix: setIsInitialization 

2019-03-06 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Do not add the id parameter to the title if append is used, because the debug output can come from many pages.
    * new feature: add the id parameter to debugBegin and debugEnd

2019-03-02 Franz Holzinger <franz@ttproducts.de>
    * new feature: Make the date time format configurable. Add a date time stamp with each debugBegin and debugEnd.

2019-02-08 Franz Holzinger <franz@ttproducts.de>
    * new feature: Determine the relative path to the domain for TYPO3 in order to determine the path to the CSS file

2018-12-14 Franz Holzinger <franz@ttproducts.de>
    * new feature: allow a prefix before the path to the CSS file

2018-10-17 Franz Holzinger <franz@ttproducts.de>
     * Do not debug any output from sysLog if the exclude expression matches even if a debugBegin has been executed before.
     * modification of composer.json

2018-10-03 Franz Holzinger <franz@ttproducts.de>
     * remove the reset file feature because it seems not to be useful

2018-09-29 Franz Holzinger <franz@ttproducts.de>
    * improvement: replace the ReflectionClass and the methods getProperties and getProperty by a conversion function from object to array from http://php.net/manual/en/function.get-object-vars.php . This is needed because a stdClass object did not show any member variables.

2018-09-22 Franz Holzinger <franz@ttproducts.de>
     * bugfix for TYPO3 9.3: add debugBegin and debugEnd to the patch for TYPO3 9.3.3

2018-09-13 Franz Holzinger <franz@ttproducts.de>
     * important bugtracker entry 86220 based on 23899: debugBegin and debugEnd is missing in TYPO3 9.3.3
