@@ -1,4 +1,4 @@
-  # cat=basic/enable; type=string; label=IP address of the client browser: Enter your current IP address ###IP###, if you want to debug this client's actions. (You see here only a marker if the TYPO3 extension patchem has been installed.) This will override the SYS devIPMask settings from the Install Tool. For localhost use ::1
+  # cat=basic/enable; type=string; label=IP address of the client browser: Enter your current IP address ###IP###, if you want to debug this client's actions. (You see here only a marker if the required TYPO3 extension patchem has not been installed.) This will override the SYS devIPMask settings from the Install Tool. For localhost use ::1
 IPADDRESS = ::1
   # cat=basic/enable; type=boolean; label=debugBegin required: Set this if you only want to have a debug output between the debugBegin and debugEnd. The first debugBegin will initialize the debug.
 DEBUGBEGIN = 0
@@ -16,8 +16,10 @@ USE_ERROR_LOG = 0
 IGNORE =
   # cat=basic/enable; type=string; label= start files: names of the first PHP file in the execution path. If set then debug output will be generated only if a file with one of these names is the first one in the backtrace.
 STARTFILES =
-  # cat=basic/enable; type=string; label= part files: names of any of the PHP file in the execution path. If set then debug output will be generated only if a file with one of these names is the backtrace.
+  # cat=basic/enable; type=string; label= part files: required names of any of the PHP file in the execution path. If set then debug output will be generated only if a file with one of these names is the backtrace.
 PARTFILES =
+  # cat=basic/enable; type=string; label= exclude files: excluded names of any of the PHP file in the execution path. If set then no debug output will be generated only if a file with one of these names is the backtrace.
+EXCLUDEFILES =
   # cat=basic/enable; type=string; label= write mode of debug file: 'w' ... overwrite the debug file. See php function fopen for more values. This is only used if APPENDDEPTH <= 1.
 DEBUGFILEMODE = wb
   # cat=basic/conf; type=string; label= Comma-sep. list of TRACE fields: see the PHP function debug_backtrace for the possible fiel names: file, line, function, class, object, type, args
@@ -52,6 +54,4 @@ TITLE = Debug for my website
 MAXFILESIZE = 3
   # cat=basic/conf; type=string; label=Date Time format: see the PHP date function for the format, e.g. H:i:s  d.m.Y
 DATETIME = H:i:s  d.m.Y
-
-
 
