@@ -1,3 +1,6 @@
+2019-03-14 Franz Holzinger <franz@ttproducts.de>
+    * bugfix to the new partfiles feature
+
 2019-03-12 Franz Holzinger <franz@ttproducts.de>
     * new feature: partfiles give a list of files from which one must be included in the backtrace in order to generate a debug output
     * use new PHP feature: use the short call debug_backtrace(DEBUG_BACKTRACE_IGNORE_ARGS).
